--- a/project/argocd/helm-techtrends-staging.yaml
+++ b/project/argocd/helm-techtrends-staging.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: techtrends-staging 
-  namespace: techtrends
+  namespace: argocd
 spec:
   destination:
     namespace: default
